# JobExchange

./: .gitignore  CMakeLists.txt  README.md  backup.sql  build.sh  docker-compose.yml  import_data.sql  install.sh  installer.sh  main.cpp  resources.qrc  text.txt
db/: auth_queries.sql  data_queries.sql  init.sql  migration_001.sql  migration_002.sql  queries.sql
docker/migrations/: 001_initial_schema.sql
src/: main.cpp
src/core/: DataExporter.cpp  DataExporter.h  DatabaseManager.cpp  DatabaseManager.h  QueryLoader.cpp  QueryLoader.h  Utils.cpp  Utils.h
src/dao/: ApplicantDao.cpp  ApplicantDao.h  ApplicationDao.cpp  ApplicationDao.h  CompanyDao.cpp  CompanyDao.h  UserDao.cpp  UserDao.h  VacancyDao.cpp  VacancyDao.h
src/models/: User.h
src/ui/: AddApplicantDialog.cpp  AddApplicantDialog.h  AddCompanyDialog.cpp  AddCompanyDialog.h  AddVacancyDialog.cpp  AddVacancyDialog.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  RegisterDialog.cpp  RegisterDialog.h
ui/dialogs/: CompanyDialog.h  VacancyDialog.cpp
